messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging
    version: green    
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
