messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-messaging-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.local     # Replace with domain (or add to /etc/hosts for local)
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service # Django service name
            port:
              number: 8000
